--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -34,8 +34,7 @@
       consectetur et in vitae est dicta! Vitae enim perferendis praesentium
       magnam ipsam, consectetur maiores natus cupiditate aperiam dolore minima
       reprehenderit! Dolorem est necessitatibus itaque magni repudiandae
-      delectus ipsa quis perferendis libero, minima, facilis, quasi voluptas.
-      Exercitationem.
+      delectus ipsa quis perfere.
     </p>
   </body>
 </html>
