--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -33,8 +33,7 @@
       cumque iste quidem deserunt. Ad reiciendis sed laboriosam qui distinctio,
       consectetur et in vitae est dicta! Vitae enim perferendis praesentium
       magnam ipsam, consectetur maiores natus cupiditate aperiam dolore minima
-      reprehenderit! Dolorem est necessitatibus itaque magni repudiandae
-      delectus ipsa quis perfere.
+      reprehenderit.
     </p>
   </body>
 </html>
