Build Arrow Link Component.

--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -10,30 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14.?32,100..900;1,14..32,100..900&display=swap"
       --
     />
-    rel="stylesheet" />
-    <link rel="stylesheet" href="FIRST_Project/FIRST COMMIT/normalize.css" />
-    <link rel="stylesheet" href="FIRST_Project/FIRST COMMIT/Style.css" />
+
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="Style.css" />
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>
-      Loripsum, dolor sit amet consectetur adipisicing elit. Deleniti, soluta!
-      Aliquid labore harum eos molestiae quis unde, eligendi aspernatur cum
-      officia voluptatem, dolorum dicta enim numquam accusamus in quod
-      temporibus. Ipsam, iste assumenda recusandae quas aliquam aliquid harum
-      sed, maiores ea voluptate, facilis magni. Quos quam reiciendis suscipit
-      at, optio, ipsum nostrum esse unde repellat obcaecati odio consequuntur
-      voluptas magni. Dolorum cumque fuga deleniti quis pariatur quidem numquam
-      vel provident dolorem doloribus officia eveniet perspiciatis maxime
-      aliquid earum et, quasi delectus ratione dolore accusantium totam amet
-      ipsam vitae voluptates? Consequuntur! Odit, sunt. Quod nesciunt quibusdam
-      laudantium autem odit earum dignissimos cum unde recusandae laborum,
-      cumque iste quidem deserunt. Ad reiciendis sed laboriosam qui distinctio,
-      consectetur et in vitae est dicta! Vitae enim perferendis praesentium
-      magnam ipsam, consectetur maiores natus cupiditate aperiam dolore minima
-      reprehenderit.
-    </p>
+    <a href="#" class="link-arrow">Learn More</a>
   </body>
 </html>
