--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -15,6 +15,11 @@
     <link rel="stylesheet" href="Style.css" />
   </head>
   <body>
-    <span class="badge badge--primary">10% off</span>
+    <!-- <svg class="icon">
+      <use xlink:href="Images/sprite (1).svg#wordpress"></use>
+    </svg> -->
+    <span class="icon-container"
+      ><img class="icon icon--primary" src="Images/computer.svg" alt=""
+    /></span>
   </body>
 </html>
