Added Button Element

--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -15,11 +15,8 @@
     <link rel="stylesheet" href="Style.css" />
   </head>
   <body>
-    <!-- <svg class="icon">
-      <use xlink:href="Images/sprite (1).svg#wordpress"></use>
-    </svg> -->
-    <span class="icon-container"
-      ><img class="icon icon--primary" src="Images/computer.svg" alt=""
-    /></span>
+    <button class="btn btn--primary btn--block">Buy Now</button>
+    <a href="#" class="btn btn--secondary btn--block">Buy Now</a>
+    <a href="#" class="btn--accent">Get Start</a>
   </body>
 </html>
