--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -15,8 +15,13 @@
     <link rel="stylesheet" href="Style.css" />
   </head>
   <body>
-    <button class="btn btn--primary btn--block">Buy Now</button>
-    <a href="#" class="btn btn--secondary btn--block">Buy Now</a>
-    <a href="#" class="btn--accent">Get Start</a>
+    <div class="input-group">
+      <button class="btn btn--accent">Search</button>
+      <input
+        type="text"
+        class="input"
+        placeholder="Enter domain name here...."
+      />
+    </div>
   </body>
 </html>
