--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -15,13 +15,14 @@
     <link rel="stylesheet" href="Style.css" />
   </head>
   <body>
-    <div class="input-group">
-      <button class="btn btn--accent">Search</button>
-      <input
-        type="text"
-        class="input"
-        placeholder="Enter domain name here...."
-      />
+    <div style="width: 30%; padding: 4rem">
+      <div class="card card--secondary">
+        <header class="card__header">Card Title</header>
+        <div class="card_body">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+          pariatur!
+        </div>
+      </div>
     </div>
   </body>
 </html>
