--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -15,26 +15,16 @@
     <link rel="stylesheet" href="Style.css" />
   </head>
   <body>
-    <div style="width: 50%; padding: 4rem">
-      <div class="plan plan--popular">
-        <div class="card card--secondary">
-          <header class="card__header">
-            <h3 class="plan__name">Entry</h3>
-            <span class="plan__price">14</span>
-            <span class="plan__billing-cycle">/month</span>
-            <span class="badge badge--secondary badge--small">10% OFF</span>
-            <span class="plan__description">Easy start on the cloud </span>
-          </header>
-          <div class="card_body">
-            <ul class="list list--tick">
-              <li class="list__item">Unlimited website</li>
-              <li class="list__item">Unlimited Bandwidth</li>
-              <li class="list__item">100 GB SSD Storage</li>
-              <li class="list__item">3 GB RAM</li>
-            </ul>
-            <button class="btn btn--outline btn--block">BUY NOW</button>
-          </div>
-        </div>
+    <div class="media">
+      <div class="media__image">
+        <img class="icon icon--primary" src="Images/snap.svg" alt="" />
+      </div>
+      <div class="media__body">
+        <h3 class="media__title">Easy Start and Manage Update</h3>
+        <p>
+          Our cloud plans include easy onboarding for new and existing sites and
+          managed WordPress and WooCommerce auto-updates
+        </p>
       </div>
     </div>
   </body>
