--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -15,17 +15,27 @@
     <link rel="stylesheet" href="Style.css" />
   </head>
   <body>
-    <div class="media">
-      <div class="media__image">
-        <img class="icon icon--primary" src="Images/snap.svg" alt="" />
-      </div>
-      <div class="media__body">
-        <h3 class="media__title">Easy Start and Manage Update</h3>
-        <p>
-          Our cloud plans include easy onboarding for new and existing sites and
-          managed WordPress and WooCommerce auto-updates
-        </p>
-      </div>
-    </div>
+    <blockquote class="quote">
+      <p class="quote__text">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis, laborum
+        aperiam. Rem, impedit? Debitis dolorum tenetur eaque odit, qui ullam
+        excepturi, vel vitae, quia nulla minus cumque. Facere, provident esse.
+      </p>
+      <footer>
+        <div class="media">
+          <div class="media__image">
+            <img
+              class="icon icon--primary quote__line"
+              src="Images/line.svg"
+              alt=""
+            />
+          </div>
+          <div class="media__body">
+            <h3 class="media__title quote__author">Adedewe Abiodun</h3>
+            <p class="quote__organisation">Geospatial Technology Nexus</p>
+          </div>
+        </div>
+      </footer>
+    </blockquote>
   </body>
 </html>
