--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -15,27 +15,10 @@
     <link rel="stylesheet" href="Style.css" />
   </head>
   <body>
-    <blockquote class="quote">
-      <p class="quote__text">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis, laborum
-        aperiam. Rem, impedit? Debitis dolorum tenetur eaque odit, qui ullam
-        excepturi, vel vitae, quia nulla minus cumque. Facere, provident esse.
-      </p>
-      <footer>
-        <div class="media">
-          <div class="media__image">
-            <img
-              class="icon icon--primary quote__line"
-              src="Images/line.svg"
-              alt=""
-            />
-          </div>
-          <div class="media__body">
-            <h3 class="media__title quote__author">Adedewe Abiodun</h3>
-            <p class="quote__organisation">Geospatial Technology Nexus</p>
-          </div>
-        </div>
-      </footer>
-    </blockquote>
+    <div class="grid grid--1x3">
+      <div style="height: 100px; background: gold"></div>
+      <div style="height: 100px; background: dodgerblue"></div>
+      <div style="height: 100px; background-color: brown"></div>
+    </div>
   </body>
 </html>
