--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -14,11 +14,42 @@
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="Style.css" />
   </head>
-  <body>
-    <div class="grid grid--1x3">
-      <div style="height: 100px; background: gold"></div>
-      <div style="height: 100px; background: dodgerblue"></div>
-      <div style="height: 100px; background-color: brown"></div>
+  <body style="padding: 5rem">
+    <div class="card testimonial">
+      <div class="grid grid--1x2">
+        <div class="testimonial__image">
+          <img src="Images/testimonial.jpg" alt="A happy smilling customer" />
+          <span class="icon-container icon--white icon--small"
+            ><img class="icon icon--primary" src="Images/quotes.svg" alt=""
+          /></span>
+        </div>
+
+        <div>
+          <blockquote class="quote">
+            <p class="quote__text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis,
+              laborum aperiam. Rem, impedit? Debitis dolorum tenetur eaque odit,
+              qui ullam excepturi, vel vitae, quia nulla minus cumque. Facere,
+              provident esse.
+            </p>
+            <footer>
+              <div class="media">
+                <div class="media__image">
+                  <img
+                    class="icon icon--primary quote__line"
+                    src="Images/line.svg"
+                    alt=""
+                  />
+                </div>
+                <div class="media__body">
+                  <h3 class="media__title quote__author">Adedewe Abiodun</h3>
+                  <p class="quote__organisation">Geospatial Technology Nexus</p>
+                </div>
+              </div>
+            </footer>
+          </blockquote>
+        </div>
+      </div>
     </div>
   </body>
 </html>
