--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -14,5 +14,33 @@
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="Style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h2 collapsible__heading>Item 1</h2>
+
+        <div class="icon icon--white collapsible__chevron">
+          <img src="Images/chevron.svg" alt="" />
+        </div>
+      </header>
+      <div class="collapsible__content">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, atque
+        aut deserunt, necessitatibu.
+      </div>
+      <div class="collapsible collapsible--expanded">
+        <header class="collapsible__header">
+          <h2 collapsible__heading>Item 1</h2>
+  
+          <div class="icon icon--white collapsible__chevron">
+            <img src="Images/chevron.svg" alt="" />
+          </div>
+        </header>
+        <div class="collapsible__content">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, atque
+          aut deserunt, necessitatibu.
+        </div>
+
+      <script src="Images/main.js"></script>
+    </div>
+  </body>
 </html>
