--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -15,32 +15,35 @@
     <link rel="stylesheet" href="Style.css" />
   </head>
   <body>
-    <div class="collapsible collapsible--expanded">
-      <header class="collapsible__header">
-        <h2 collapsible__heading>Item 1</h2>
-
-        <div class="icon icon--white collapsible__chevron">
-          <img src="Images/chevron.svg" alt="" />
-        </div>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui deserunt
+          dolore distinctio.
+        </p>
       </header>
-      <div class="collapsible__content">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, atque
-        aut deserunt, necessitatibu.
-      </div>
-      <div class="collapsible collapsible--expanded">
-        <header class="collapsible__header">
-          <h2 collapsible__heading>Item 1</h2>
-  
-          <div class="icon icon--white collapsible__chevron">
-            <img src="Images/chevron.svg" alt="" />
+      <!-- Simple card -->
+      <div style="width: 30%; padding: 4rem">
+        <div class="card card--secondary">
+          <header class="card__header">Card Title</header>
+          <div class="card_body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+            pariatur!
           </div>
-        </header>
-        <div class="collapsible__content">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, atque
-          aut deserunt, necessitatibu.
         </div>
-
-      <script src="Images/main.js"></script>
-    </div>
+      </div>
+    </section>
+    <section class="block block--dark block--skewed-left container">
+      <div class="container">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui
+          voluptatibus ducimus eos consequatur magni id nostrum porro tenetur
+          iure repellendus quaerat reprehenderit quasi mollitia, magnam dolores
+          voluptate deserunt dolore distinctio.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
