--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -15,35 +15,18 @@
     <link rel="stylesheet" href="Style.css" />
   </head>
   <body>
-    <section class="block container">
-      <header class="block__header">
-        <h2 class="block__heading">Heading</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui deserunt
-          dolore distinctio.
-        </p>
-      </header>
-      <!-- Simple card -->
-      <div style="width: 30%; padding: 4rem">
-        <div class="card card--secondary">
-          <header class="card__header">Card Title</header>
-          <div class="card_body">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-            pariatur!
-          </div>
-        </div>
+    <nav class="nav collapsible">
+      <a class="nav__brand" href="/"><img src="Images/logo.svg" alt="" /></a>
+      <div class="icon icon--white nav__toggler">
+        <img src="Images/chevron.svg" alt="" />
       </div>
-    </section>
-    <section class="block block--dark block--skewed-left container">
-      <div class="container">
-        <h2 class="block__heading">Heading</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui
-          voluptatibus ducimus eos consequatur magni id nostrum porro tenetur
-          iure repellendus quaerat reprehenderit quasi mollitia, magnam dolores
-          voluptate deserunt dolore distinctio.
-        </p>
-      </div>
-    </section>
+      <ul class="list nav__list collapsible__content">
+        <li class="nav__item"><a href="#">Hosting</a></li>
+        <li class="nav__item"><a href="#">VPS</a></li>
+        <li class="nav__item"><a href="#">Domain</a></li>
+        <li class="nav__item"><a href="#">Pricing</a></li>
+      </ul>
+    </nav>
+    <script src="Images/main.js"></script>
   </body>
 </html>
