Modified Navigation Bar

--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -18,7 +18,7 @@
     <nav class="nav collapsible">
       <a class="nav__brand" href="/"><img src="Images/logo.svg" alt="" /></a>
       <div class="icon icon--white nav__toggler">
-        <img src="Images/chevron.svg" alt="" />
+        <img src="Images/menu_updated.svg" alt="" />
       </div>
       <ul class="list nav__list collapsible__content">
         <li class="nav__item"><a href="#">Hosting</a></li>
