Added Domain Block

--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -24,7 +24,15 @@
           </p>
           <a href="" class="btn btn--accent btn--stretched">Get Started</a>
         </header>
-        <img class="hero__image" src="Images/banner.png" alt="" />
+        <picture>
+          <source
+            type="Images/webp"
+            src="Images/banner (1).png 1x, Images/banner@2x.png 2x" />
+          <source
+            type="Images/png"
+            src="Images/banner (1).webp 1x, Images/banner@2x.webp 2x" />
+          <img class="hero__image" src="Images/banner.png" alt=""
+        /></picture>
       </div>
     </section>
   </body>
