Added Features Block

--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -8,82 +8,42 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14.?32,100..900;1,14..32,100..700&display=swap"
-      --
     />
 
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="Style.css" />
   </head>
   <body>
-    <section class="block container block-plans">
-      <div class="grid grid--1x3">
-        <div>
-          <div class="plan">
-            <div class="card card--secondary">
-              <header class="card__header">
-                <h3 class="plan__name">Entry</h3>
-                <span class="plan__price">14</span>
-                <span class="plan__billing-cycle">/month</span>
-                <span class="badge badge--secondary badge--small">10% OFF</span>
-                <span class="plan__description">Easy start on the cloud </span>
-              </header>
-              <div class="card_body">
-                <ul class="list list--tick">
-                  <li class="list__item">Unlimited website</li>
-                  <li class="list__item">Unlimited Bandwidth</li>
-                  <li class="list__item">100 GB SSD Storage</li>
-                  <li class="list__item">3 GB RAM</li>
-                </ul>
-                <button class="btn btn--outline btn--block">BUY NOW</button>
-              </div>
-            </div>
-          </div>
+    <section class="block container">
+      <header class="block__header">
+        <h2>Host on the Cloud to Keep Grow</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elits.</p>
+      </header>
+      <article class="grid grid--1x2 feature">
+      <div class="feature__content">
+        <div class="icon icon--primary">
+          <img src="Images/clock.svg" alt="" />
         </div>
-        <div>
-          <div class="plan plan--popular">
-            <div class="card card--primary">
-              <header class="card__header">
-                <h3 class="plan__name">Entry</h3>
-                <span class="plan__price">14</span>
-                <span class="plan__billing-cycle">/month</span>
-                <span class="badge badge--primary badge--small">10% OFF</span>
-                <span class="plan__description">Easy start on the cloud </span>
-              </header>
-              <div class="card_body">
-                <ul class="list list--tick">
-                  <li class="list__item">Unlimited website</li>
-                  <li class="list__item">Unlimited Bandwidth</li>
-                  <li class="list__item">100 GB SSD Storage</li>
-                  <li class="list__item">3 GB RAM</li>
-                </ul>
-                <button class="btn btn--outline btn--block">BUY NOW</button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div>
-          <div class="plan">
-            <div class="card card--secondary">
-              <header class="card__header">
-                <h3 class="plan__name">Entry</h3>
-                <span class="plan__price">14</span>
-                <span class="plan__billing-cycle">/month</span>
-                <span class="badge badge--secondary badge--small">10% OFF</span>
-                <span class="plan__description">Easy start on the cloud </span>
-              </header>
-              <div class="card_body">
-                <ul class="list list--tick">
-                  <li class="list__item">Unlimited website</li>
-                  <li class="list__item">Unlimited Bandwidth</li>
-                  <li class="list__item">100 GB SSD Storage</li>
-                  <li class="list__item">3 GB RAM</li>
-                </ul>
-                <button class="btn btn--outline btn--block">BUY NOW</button>
-              </div>
-            </div>
-          </div>
-        </div>
+        <h3 class="feature__heading">Super Easy to Use</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis dolores sed libero commodi, accusamus nobis eligendi. Officiis atque repudiandae, odit rep</p>
+        <a href="#" class="link-arrow">Learn More</a>
       </div>
-    </section>
-  </body>
+      <img class="feature__image" src="Images/easy.jpg" alt="">
+      <!-- <picture><source type="Images/svg"><img src="Images/easy.svg" alt=""></source>
+        <source type="Images/jpg"><img src="Images/easy.jpg" alt=""></source></picture> -->
+    </article>
+    <article class="grid grid--1x2 feature">
+      <div class="feature__content">
+        <div class="icon icon--primary">
+          <img src="Images/wordpress.svg" alt="" />
+        </div>
+        <h3 class="feature__heading">WordPress Made Easy</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis dolores sed libero commodi, accusamus nobis eligendi. Officiis atque repudiandae, odit rep</p>
+        <a href="#" class="link-arrow">Learn More</a>
+      </div>
+      <img class="feature__image" src="Images/wordpress.jpg" alt="">
+      <!-- <picture><source type="Images/svg"><img src="Images/easy.svg" alt=""></source>
+        <source type="Images/jpg"><img src="Images/easy.jpg" alt=""></source></picture> -->
+    </article></section>
+
 </html>
