Added Showcase block incomplete and Testimonial Block

--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -14,36 +14,61 @@
     <link rel="stylesheet" href="Style.css" />
   </head>
   <body>
-    <section class="block container">
+    <section class="block block--dark block--skewed-right block-showcase">
       <header class="block__header">
-        <h2>Host on the Cloud to Keep Grow</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elits.</p>
+        <h2>User-friendly Control Panel</h2>
       </header>
-      <article class="grid grid--1x2 feature">
-      <div class="feature__content">
-        <div class="icon icon--primary">
-          <img src="Images/clock.svg" alt="" />
-        </div>
-        <h3 class="feature__heading">Super Easy to Use</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis dolores sed libero commodi, accusamus nobis eligendi. Officiis atque repudiandae, odit rep</p>
-        <a href="#" class="link-arrow">Learn More</a>
-      </div>
-      <img class="feature__image" src="Images/easy.jpg" alt="">
-      <!-- <picture><source type="Images/svg"><img src="Images/easy.svg" alt=""></source>
-        <source type="Images/jpg"><img src="Images/easy.jpg" alt=""></source></picture> -->
-    </article>
-    <article class="grid grid--1x2 feature">
-      <div class="feature__content">
-        <div class="icon icon--primary">
-          <img src="Images/wordpress.svg" alt="" />
-        </div>
-        <h3 class="feature__heading">WordPress Made Easy</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis dolores sed libero commodi, accusamus nobis eligendi. Officiis atque repudiandae, odit rep</p>
-        <a href="#" class="link-arrow">Learn More</a>
-      </div>
-      <img class="feature__image" src="Images/wordpress.jpg" alt="">
-      <!-- <picture><source type="Images/svg"><img src="Images/easy.svg" alt=""></source>
-        <source type="Images/jpg"><img src="Images/easy.jpg" alt=""></source></picture> -->
-    </article></section>
-
+      <div class="container grid grid1x2">
+        <img class="block-showcase__image" src="Images/ipad.png" alt="">
+        <ul class="list">
+          <li>
+            <div class="media">
+            <div class="media__image">
+              <div class="icon icon--primary"><img src="Images/chevron.svg" alt="Not" /></div>
+            </div>
+            <div class="media__body">
+              <h3 class="media__title">Easy Start and Manage Update</h3>
+              <p>
+                Our cloud plans include easy onboarding for new and existing sites and
+                managed WordPress and WooCommerce auto-updates. ing for new and existing sites and
+                managed WordPress and WooCommerce auto-updates.ing for new and existing sites and
+                managed WordPress and WooCommerce auto-updates
+              </p>
+            </div>
+          </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <div class="icon icon--primary"><img src="Images/chevron.svg" alt="Not" /></div>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Staging, GIT & WP-CLI</h3>
+                <p>
+                  Our cloud plans include easy onboarding for new and existing sites and
+                  managed WordPress and WooCommerce ing for new and existing sites and
+                  managed WordPress and WooCommerce auto-updatesauto-updatesing for new and existing sites and
+                  managed WordPress and WooCommerce auto-updates
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <div class="icon icon--primary"><img src="Images/chevron.svg" alt="Not" /></div>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Dynamic Caching $ More</h3>
+                <p>
+                  Our cloud plans include easy onboarding for new and existing sites and
+                  managed WordPress and WooCommerceing for new and existing sites and
+                  managed WordPress and WooCommerce auto-updates auto-updatesing for new and existing sites and
+                  managed WordPress and WooCommerce auto-updates
+                </p>
+              </div>
+            </div>
+          </li>
+        </ul>
+    </section>
 </html>
