Added MODIFIED Footer Element

--- a/Initial Commit/Index.html
+++ b/Initial Commit/Index.html
@@ -14,61 +14,82 @@
     <link rel="stylesheet" href="Style.css" />
   </head>
   <body>
-    <section class="block block--dark block--skewed-right block-showcase">
-      <header class="block__header">
-        <h2>User-friendly Control Panel</h2>
-      </header>
-      <div class="container grid grid1x2">
-        <img class="block-showcase__image" src="Images/ipad.png" alt="">
-        <ul class="list">
-          <li>
-            <div class="media">
-            <div class="media__image">
-              <div class="icon icon--primary"><img src="Images/chevron.svg" alt="Not" /></div>
+    <footer class="block block--dark footer">
+      <div class="container grid footer__sections">
+        <section class="collapsible collapsible--expanded footer__sections">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">PRODUCTS</h2>
+
+            <div class="icon icon--white collapsible__chevron">
+              <img src="Images/chevron.svg" alt="" />
             </div>
-            <div class="media__body">
-              <h3 class="media__title">Easy Start and Manage Update</h3>
-              <p>
-                Our cloud plans include easy onboarding for new and existing sites and
-                managed WordPress and WooCommerce auto-updates. ing for new and existing sites and
-                managed WordPress and WooCommerce auto-updates.ing for new and existing sites and
-                managed WordPress and WooCommerce auto-updates
-              </p>
-            </div>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Website Hosting</a></li>
+              <li><a href="#">Free Automated Wordpress</a></li>
+              <li></li>
+              <a href="#">Migrations</a>
+            </ul>
           </div>
-          </li>
-          <li>
-            <div class="media">
-              <div class="media__image">
-                <div class="icon icon--primary"><img src="Images/chevron.svg" alt="Not" /></div>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title">Staging, GIT & WP-CLI</h3>
-                <p>
-                  Our cloud plans include easy onboarding for new and existing sites and
-                  managed WordPress and WooCommerce ing for new and existing sites and
-                  managed WordPress and WooCommerce auto-updatesauto-updatesing for new and existing sites and
-                  managed WordPress and WooCommerce auto-updates
-                </p>
-              </div>
+        </section>
+        <section class="collapsible footer__sections">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">COMPANY</h2>
+
+            <div class="icon icon--white collapsible__chevron">
+              <img src="Images/chevron.svg" alt="" />
             </div>
-          </li>
-          <li>
-            <div class="media">
-              <div class="media__image">
-                <div class="icon icon--primary"><img src="Images/chevron.svg" alt="Not" /></div>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title">Dynamic Caching $ More</h3>
-                <p>
-                  Our cloud plans include easy onboarding for new and existing sites and
-                  managed WordPress and WooCommerceing for new and existing sites and
-                  managed WordPress and WooCommerce auto-updates auto-updatesing for new and existing sites and
-                  managed WordPress and WooCommerce auto-updates
-                </p>
-              </div>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">About</a></li>
+              <li><a href="#">Affilates</a></li>
+              <li></li>
+              <a href="#">Blog</a>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__sections">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">SUPPORT</h2>
+
+            <div class="icon icon--white collapsible__chevron">
+              <img src="Images/chevron.svg" alt="" />
             </div>
-          </li>
-        </ul>
-    </section>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">Knowledge Base</a></li>
+              <li></li>
+              <a href="#">FAO</a>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__sections">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">DoMAINS</h2>
+
+            <div class="icon icon--white collapsible__chevron">
+              <img src="Images/chevron.svg" alt="" />
+            </div>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Domain Checker</a></li>
+              <li><a href="#">Domain Transfer</a></li>
+              <li></li>
+              <a href="#">Free Dmain</a>
+            </ul>
+          </div>
+        </section>
+        <section class="footer__brand">
+          <img src="Images/logo.svg" alt="" />
+          <p class="footer__copyright">Copyright 2020 Adedewe Abiodun</p>
+        </section>
+      </div>
+    </footer>
+    <script src="Images/main.js"></script>
+  </body>
 </html>
